ci: update pnpm version to 9.15.5 in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: 20
 
       - uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.5
           
       - name: Run tests
         run: pnpm run test
