ci: update pnpm version in CI workflow to 9.x.x

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 9.15.5
+          version: 9.x.x
           
       - name: Run tests
         run: pnpm run test
