--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,6 @@ jobs:
           version: 9.x.x
           
       - name: Run tests
-        run: pnpm run test
+        run: |
+          pnpm install
+          pnpm run test
