--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,11 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 9.x.x
-          
+
+      - name: Install xvfb
+        run: sudo apt-get install -y xvfb
+
       - name: Run tests
         run: |
           pnpm install
-          pnpm run test
+          xvfb-run --auto-servernum pnpm run test
