ci(workflow): add pnpm setup action to GitHub Actions workflow

--- a/.github/workflows/tagpr.yml
+++ b/.github/workflows/tagpr.yml
@@ -44,6 +44,10 @@ jobs:
         with:
           node-version: 20
 
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.x.x
+
       - name: Publish to Visual Studio Marketplace
         uses: HaaLeo/publish-vscode-extension@v1
         with:
