ci(github): add npm install step to GitHub Actions workflow

--- a/.github/workflows/tagpr.yml
+++ b/.github/workflows/tagpr.yml
@@ -48,6 +48,8 @@ jobs:
         with:
           version: 9.x.x
 
+      - run: npm install
+
       - name: Publish to Visual Studio Marketplace
         uses: HaaLeo/publish-vscode-extension@v1
         with:
